@@ -1,4 +1,4 @@
-from cms.models.fields import PlaceholderField
+from cms.models.fields import PageField, PlaceholderField
 from django.core.urlresolvers import reverse
 from django.db import models
 from django.utils.encoding import python_2_unicode_compatible
@@ -32,3 +32,19 @@ class SampleAppConfig(models.Model):
         max_length=100,
         unique=True,
     )
+
+
+class PageOnDeleteCascade(models.Model):
+    page = PageField(null=True)
+
+
+class PageOnDeleteSetNull(models.Model):
+    page = PageField(on_delete=models.SET_NULL, null=True)
+
+
+class PlaceholderOnDeleteCascade(models.Model):
+    placeholder = PlaceholderField('body', null=True)
+
+
+class PlaceholderOnDeleteSetNull(models.Model):
+    placeholder = PlaceholderField('body', on_delete=models.SET_NULL, null=True)
